WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118801
MediaPlayerPrivateAVFoundationCF::processNewAndRemovedTextTracks should be shared by ObjC and CF versions
https://bugs.webkit.org/show_bug.cgi?id=118801
Summary
MediaPlayerPrivateAVFoundationCF::processNewAndRemovedTextTracks should be sh...
Brent Fulgham
Reported
2013-07-17 10:04:17 PDT
The code in MediaPlayerPrivateAVFoundationCF::processNewAndRemovedTextTracks is identical to the code in MediaPlayerPrivateAVFoundationObjC::processNewAndRemovedTextTracks. The implementation should be lifted to the parent class.
Attachments
Patch
(9.68 KB, patch)
2013-07-18 16:02 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-07-17 12:36:21 PDT
<
rdar://problem/14472043
>
Brent Fulgham
Comment 2
2013-07-18 16:02:33 PDT
Created
attachment 207029
[details]
Patch
Brent Fulgham
Comment 3
2013-07-18 16:04:12 PDT
It turns out that "clearTracks" was identical as well.
WebKit Commit Bot
Comment 4
2013-07-18 18:07:24 PDT
Comment on
attachment 207029
[details]
Patch Clearing flags on attachment: 207029 Committed
r152876
: <
http://trac.webkit.org/changeset/152876
>
WebKit Commit Bot
Comment 5
2013-07-18 18:07:27 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 6
2013-07-18 20:47:03 PDT
This patch caused a build failure on Mountain Lion: /Volumes/Data/slave/mountainlion-debug/build/Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:908:115: error: format specifies type 'int' but the argument has type 'size_t' (aka 'unsigned long') [-Werror,-Wformat] LOG(Media, "MediaPlayerPrivateAVFoundation::processNewAndRemovedTextTracks(%p) - found %i text tracks", this, m_textTracks.size()); ~~ ^~~~~~~~~~~~~~~~~~~ %zi /Volumes/Data/slave/mountainlion-debug/build/WebKitBuild/Debug/usr/local/include/wtf/Assertions.h:344:94: note: expanded from macro 'LOG' #define LOG(channel, ...) WTFLog(&JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, channel), __VA_ARGS__) ^ 1 error generated.
Brent Fulgham
Comment 7
2013-07-19 10:38:36 PDT
(In reply to
comment #6
)
> This patch caused a build failure on Mountain Lion: > > /Volumes/Data/slave/mountainlion-debug/build/Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:908:115: error: format specifies type 'int' but the argument has type 'size_t' (aka 'unsigned long') [-Werror,-Wformat] > LOG(Media, "MediaPlayerPrivateAVFoundation::processNewAndRemovedTextTracks(%p) - found %i text tracks", this, m_textTracks.size()); > ~~ ^~~~~~~~~~~~~~~~~~~ > %zi > /Volumes/Data/slave/mountainlion-debug/build/WebKitBuild/Debug/usr/local/include/wtf/Assertions.h:344:94: note: expanded from macro 'LOG' > #define LOG(channel, ...) WTFLog(&JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, channel), __VA_ARGS__) > ^ > 1 error generated.
Thank you for fixing that!
http://trac.webkit.org/changeset/152884
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug